--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "express-validator": "2.7.0",
     "forever": "0.11.1",
     "gridfs-stream": "0.5.3",
+    "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-hook": "~0.3.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-csslint": "^0.3.1",
@@ -47,9 +47,10 @@
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-env": "^0.4.1",
+    "grunt-hook": "~0.3.0",
     "grunt-nodemon": "^0.3.0",
     "load-grunt-tasks": "^0.6.0",
-    "lodash": "2.4.1",
+    "lodash": "^2.4.1",
     "meanio": "^0.6.16",
     "method-override": "1.0.2",
     "mongoose": "3.8.21",
@@ -63,10 +64,12 @@
     "passport-linkedin": "0.1.3",
     "passport-local": "1.0.0",
     "passport-twitter": "1.0.2",
+    "request": "^2.51.0",
     "serve-favicon": "2.2.0",
     "swig": "1.4.2",
     "time-grunt": "^1.0.0",
-    "view-helpers": "0.1.5"
+    "view-helpers": "0.1.5",
+    "yahoo-finance": "^0.2.10"
   },
   "devDependencies": {
     "expect.js": "0.3.1",
