--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "connect-mongo": "0.4.2",
     "consolidate": "0.10.0",
     "cookie-parser": "1.3.3",
+    "cron": "^1.0.5",
     "dependable": "0.2.5",
     "errorhandler": "1.3.0",
     "express": "4.10.6",
